================================================================


RELEASE NOTES
=============


2.40.2 - September ??, 2010

    Added experimental support for coinductive predicates to the Logtalk
    compiler using a coinductive/1 directive. Requires a back-end Prolog
    compiler providing minimal support for cyclic terms (currently, YAP,
    CxProlog, ECLiPSe, SICStus Prolog, and SWI-Prolog). Added a "coinductive"
    predicate property. Added a "coinduction" read-only flag.

    Added a new Logtalk built-in predicate, logtalk_load_context/2, similar
    to the prolog_load_context/2 built-in predicate found in several Prolog
    compilers, in order to provide access to the compilation/loading context.
    The initial set of supported context keys is {entity_name, entity_prefix,
    entity_type, file, directory, term_position}. The term_position key is
    only supported in back-end Prolog compilers that provide the start and
    end lines of a read term.

    Corrected a bug in the runtime error handler that would result in entity
    existence errors being reported as (internal) predicate existence errors.

    Corrected a bug where the protocols implemented by the built-in object
    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.

    Corrected a bug where multifile/1 directives would only accept a single
    predicate indicator as argument.

    Updated the CxProlog config file to require version 0.97.5 or later. This
    version adds the epsilon/0 arithmetic constant that is used in the library
    unit test support.

    Updated the SWI-Prolog and YAP config files in order to support the
    expects_dialect/1 proprietary directive.

    Removed the definitions of the no longer necessary '$lgt_keysort'/2 and
    '$lgt_sort'/2 internal predicates from the supported config files.

    Added an experimental example of coinduction when using ECLiPSe, YAP, or
    SWI-Prolog as the back-end Prolog compiler.
