@@ -1,0 +1,27 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.40.2
+
+Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+This directory contains the "sh_logtalk.js" file that provides syntax 
+coloring support for SHJS (version 0.6 or later):
+
+	http://shjs.sourceforge.net/
+
+
+This support file is dual-licensed under the Artistic License 2.0 and the 
+SHJS license.
+
+If support for Logtalk is not included or if it is outdated in your SHJS
+distribution, just replace the file "sh_logtalk.js" in the SHJS distribution
+"lang" directory with the newer file from this directory.
+
+The file "source.html" is a test file based on the "../tests/source.lgt"
+file. To use this test file, copy it to the root of your SHJS distribution
+directory and open it in your favorite web browser.
