@@ -1,4 +1,15 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
 
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Sample test of Logtalk code syntax highlight using SHJS</title>
+	<script type="text/javascript" src="sh_main.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/sh_nedit.css">
+</head>
+<body onload="sh_highlightDocument('lang/', '.js');">
+<pre class="sh_logtalk">
 % this is a single-line comment
 
 /*
@@ -32,9 +43,9 @@ comment
 
 	:- info([
 		version is 1.2,
-		author is 'Paulo Moura',
+		author is &#x27;Paulo Moura&#x27;,
 		date is 2010/06/23,
-		comment is 'Sample prototype for testing syntax coloring.']).
+		comment is &#x27;Sample prototype for testing syntax coloring.&#x27;]).
 
 	:- threaded.
 	:- synchronized.
@@ -65,22 +76,22 @@ comment
 	:- discontiguous(aaa/2).
 	:- mode(aaa(+callable, ?integer), zero_or_one).
 	:- info(position/2, [
-		comment is 'Predicate brief description.',
-		arguments is ['Arg1'-'Arg1 description', 'Arg2'-'Arg2 description']]).
+		comment is &#x27;Predicate brief description.&#x27;,
+		arguments is [&#x27;Arg1&#x27;-&#x27;Arg1 description&#x27;, &#x27;Arg2&#x27;-&#x27;Arg2 description&#x27;]]).
 
 	:- protected(bbb/2).
 	:- synchronized(bbb/2).
 	:- mode(bbb(+integer, -float), one).
 	:- info(bbb/2, [
-		comment is 'Predicate brief description.',
-		argnames is ['Arg1', 'Arg2']]).
+		comment is &#x27;Predicate brief description.&#x27;,
+		argnames is [&#x27;Arg1&#x27;, &#x27;Arg2&#x27;]]).
 
 	:- private(ccc/2).
 	:- dynamic(ccc/2).
 	:- mode(ccc(@atom, ?atom), one_or_more).
 	:- info(ccc/2, [
-		comment is 'Predicate brief description.',
-		argnames is ['Arg1', 'Arg2']]).
+		comment is &#x27;Predicate brief description.&#x27;,
+		argnames is [&#x27;Arg1&#x27;, &#x27;Arg2&#x27;]]).
 
 	enumerating_entities(Object, Protocol, Category) :-
 		current_category(Category),
@@ -191,13 +202,13 @@ comment
 		{goal1, goal2, goal3}.
 
 	context_switching_calls :-
-		Object<<Goal.
+		Object&lt;&lt;Goal.
 
 	direct_calls_of_category_predicates :-
 		:Goal.
 
 	if_then_else :-
-		(	If ->
+		(	If -&gt;
 			Then
 		;	Else
 		).
@@ -206,7 +217,7 @@ comment
 		X1 is 13, X2 is -13, X3 is +13,
 		Y1 is 13.13, Y2 is -13.13, Y3 is +13.13,
 		Z1 is 13.13e-23, Z2 is -13.13e-23, Z3 is +13.13e-23,
-		C1 is 0'A, C2 is 0'', C3 is 0'",
+		C1 is 0&#x27;A, C2 is 0&#x27;&#x27;, C3 is 0&#x27;&quot;,
 		B is 0b1011101,
 		O is 0o1234560,
 		H is 0x1234567890abcDEF.
@@ -221,8 +232,8 @@ comment
 		G is float(33) + floor(99.99).
 
 	bitwise :-
-		A is 16 >> 2,
-		B is 16 << 2,
+		A is 16 &gt;&gt; 2,
+		B is 16 &lt;&lt; 2,
 		C is 10 /\ 12,
 		D is 10 \/ 12,
 		E is \ 10.
@@ -248,10 +259,10 @@ comment
 		compare(Order, Term1, Term2),
 		Term1 == Term2,
 		Term1 \== Term2,
-		Term1 @< Term2,
-		Term1 @=< Term2,
-		Term1 @>= Term2,
-		Term1 @> Term2.
+		Term1 @&lt; Term2,
+		Term1 @=&lt; Term2,
+		Term1 @&gt;= Term2,
+		Term1 @&gt; Term2.
 
 	term_creation_and_decomposition :-
 		functor(Term, Functor, Arity),
@@ -266,10 +277,10 @@ comment
 	arithemtic_comparison :-
 		Exp1 =:= Exp2,
 		Exp1 =\= Exp2,
-		Exp1 < Exp2,
-		Exp1 =< Exp2,
-		Exp1 > Exp2,
-		Exp1 >= Exp2.
+		Exp1 &lt; Exp2,
+		Exp1 =&lt; Exp2,
+		Exp1 &gt; Exp2,
+		Exp1 &gt;= Exp2.
 
 	stream_selection_and_control :-
 		current_input(Stream),
@@ -338,15 +349,15 @@ comment
 		keysort(List, Sorted),
 		sort(List, Sorted).
 
-	number(C) --> "+", number(C).
-	number(C) --> "-", number(X), {C is -X}.
-	number(X) --> [C], {0'0 =< C, C =< 0'9, X is C - 0'0}.
+	number(C) --&gt; &quot;+&quot;, number(C).
+	number(C) --&gt; &quot;-&quot;, number(X), {C is -X}.
+	number(X) --&gt; [C], {0&#x27;0 =&lt; C, C =&lt; 0&#x27;9, X is C - 0&#x27;0}.
 
 	escape_sequences :-
-		write('Quoted atom with a quote ('') inside.'),
-		write('Quoted atom with control escape sequences: \a \b \r \f \t \n \v'),
-		write('Quoted atom with an octal escape sequence: \123\.'),
-		write('Quoted atom with an hexa-decimal escape sequence: \x123f\.').
+		write(&#x27;Quoted atom with a quote (&#x27;&#x27;) inside.&#x27;),
+		write(&#x27;Quoted atom with control escape sequences: \a \b \r \f \t \n \v&#x27;),
+		write(&#x27;Quoted atom with an octal escape sequence: \123\.&#x27;),
+		write(&#x27;Quoted atom with an hexa-decimal escape sequence: \x123f\.&#x27;).
 
 :- end_object.
 
@@ -363,7 +374,7 @@ comment
 
 
 
-:- object(parametric(Parameter, "String", 33.78),
+:- object(parametric(Parameter, &quot;String&quot;, 33.78),
 	implements(protocol),
 	imports(category),
 	extends(parent(Parameter))).
@@ -387,3 +398,5 @@ comment
 
 
 :- end_protocol.
+</pre>
+</body>
